force-app/main/default/objects/MasterObject__c/MasterObject__c.object-meta.xml
<CustomObject>
    <label>Master Object</label>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>Master Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>