force-app/main/default/objects/MasterObject__c/fields/LookupObject__c.field-meta.xml
<CustomField>
    <fullName>LookupObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Object</label>
    <referenceTo>LookupObject__c</referenceTo>
    <relationshipLabel>Master Objects</relationshipLabel>
    <relationshipName>Master_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>