force-app/main/default/objects/MasterObject__c/fields/MultiSelectPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectPicklist__c</fullName>
    <label>Multi Select Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PickList Value 1</fullName>
            </value>
            <value>
                <fullName>PickList Value 2</fullName>
            </value>
            <value>
                <fullName>PickList Value 3</fullName>
            </value>
            <value>
                <fullName>PickList Value 4</fullName>
            </value>
            <value>
                <fullName>PickList Value 5</fullName>
            </value>
            <value>
                <fullName>PickList Value 6</fullName>
            </value>
            <value>
                <fullName>PickList Value 7</fullName>
            </value>
            <value>
                <fullName>PickList Value 8</fullName>
            </value>
            <value>
                <fullName>PickList Value 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>