force-app/main/default/objects/MasterObject__c/fields/NumberField__c.field-meta.xml
<CustomField>
    <fullName>NumberField__c</fullName>
    <label>Number Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>